--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "api/app.js",
-        "use": "@vercel/node"
-      }
-    ],
+    "builds": [],
     "routes": [
       {
         "src": "/api/(.*)",
