edit swagger url

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [],
     "routes": [
       {
-        "src": "/api/(.*)",
+        "src": "/(.*)",
         "dest": "api/app.js"
       }
     ]
